examples/test/testpolicy13893.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13893
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key48: value3
      key9: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value2
          key40: value19
          key34: value19
      podSelector:
        matchLabels:
          key36: value23
          key22: value23
          key4: value0
